; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/target/extr_target_core_iblock.c_iblock_end_io_flush.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/target/extr_target_core_iblock.c_iblock_end_io_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bio = type { %struct.se_cmd* }
%struct.se_cmd = type { i32 }

@.str = private unnamed_addr constant [32 x i8] c"IBLOCK: cache flush failed: %d\0A\00", align 1
@SAM_STAT_CHECK_CONDITION = common dso_local global i32 0, align 4
@SAM_STAT_GOOD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bio*, i32)* @iblock_end_io_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iblock_end_io_flush(%struct.bio* %0, i32 %1) #0 {
  %3 = alloca %struct.bio*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.se_cmd*, align 8
  store %struct.bio* %0, %struct.bio** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.bio*, %struct.bio** %3, align 8
  %7 = getelementptr inbounds %struct.bio, %struct.bio* %6, i32 0, i32 0
  %8 = load %struct.se_cmd*, %struct.se_cmd** %7, align 8
  store %struct.se_cmd* %8, %struct.se_cmd** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @pr_err(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %12)
  br label %14

14:                                               ; preds = %11, %2
  %15 = load %struct.se_cmd*, %struct.se_cmd** %5, align 8
  %16 = icmp ne %struct.se_cmd* %15, null
  br i1 %16, label %17, label %29

17:                                               ; preds = %14
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %17
  %21 = load %struct.se_cmd*, %struct.se_cmd** %5, align 8
  %22 = load i32, i32* @SAM_STAT_CHECK_CONDITION, align 4
  %23 = call i32 @target_complete_cmd(%struct.se_cmd* %21, i32 %22)
  br label %28

24:                                               ; preds = %17
  %25 = load %struct.se_cmd*, %struct.se_cmd** %5, align 8
  %26 = load i32, i32* @SAM_STAT_GOOD, align 4
  %27 = call i32 @target_complete_cmd(%struct.se_cmd* %25, i32 %26)
  br label %28

28:                                               ; preds = %24, %20
  br label %29

29:                                               ; preds = %28, %14
  %30 = load %struct.bio*, %struct.bio** %3, align 8
  %31 = call i32 @bio_put(%struct.bio* %30)
  ret void
}

declare dso_local i32 @pr_err(i8*, i32) #1

declare dso_local i32 @target_complete_cmd(%struct.se_cmd*, i32) #1

declare dso_local i32 @bio_put(%struct.bio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
